--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -4,21 +4,21 @@ import MdxProse from "src/components/MdxProse.astro";
 import Layout from "src/layouts/Layout.astro";
 import { Image } from "astro:assets";
 import gravatar from "src/assets/gravatar.jpeg";
+import { parseBlogPost } from "src/util";
+import { Temporal } from "temporal-polyfill";
 
 export async function getStaticPaths() {
   const posts = await getCollection("blog");
   return posts.map((post) => {
-    const [year, month, day, ...slugParts] = post.id.split("-");
-    const slug = slugParts.join("-");
-    const date = new Date([year, month, day].join("-"));
+    const { date, slug } = parseBlogPost(post);
     return {
-      params: { slug: [year, month, day, slug].join("/") },
+      params: { slug: [date.year, date.month, date.day, slug].join("/") },
       props: { ...post, date },
     };
   });
 }
 
-type Props = CollectionEntry<"blog"> & { date: Date };
+type Props = CollectionEntry<"blog"> & { date: Temporal.PlainDate };
 const post = Astro.props;
 const { Content } = await render(post);
 ---
@@ -29,8 +29,7 @@ const { Content } = await render(post);
       <MdxProse>
         <h1>{post.data.title}</h1>
         <div class="text-md flex items-center text-gray-500">
-          Posted on {post.date.toLocaleDateString(undefined, { year: "numeric", month: "long", day: "numeric" })} by Ben
-          Limmer
+          Posted on {post.date.toLocaleString(undefined, { year: "numeric", month: "long", day: "numeric" })} by Ben Limmer
           <Image src={gravatar} alt="Avatar image of Ben Limmer" width={20} height={20} class="mt-0 mb-0 ml-2" />
         </div>
         <Content />
