fix: some subtle visual design fixes

--- a/src/components/TldrSection.astro
+++ b/src/components/TldrSection.astro
@@ -17,7 +17,7 @@ const { tldr } = Astro.props;
           </svg>
         </span>
         <span class="text-base text-slate-100">
-          <strong>TLDR:</strong> <span set:html={tldr} />
+          <strong>TLDR:</strong> <span class="ml-1" set:html={tldr} />
         </span>
       </aside>
     </div>
