--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@
   --color-text-secondary: rgba(255, 255, 255, 0.8);
   --color-text-tertiary: rgba(255, 255, 255, 0.6);
   --color-border: rgba(255, 255, 255, 0.1);
-  --color-link: #38bdf8;
+  --color-link: var(--color-text-primary);
 }
 
 body {
@@ -78,10 +78,10 @@ body {
 
 .prose a {
   color: var(--color-link);
-  text-decoration: none;
-  transition:
-    color 0.2s,
-    text-decoration 0.2s;
+  text-decoration: underline;
+  text-underline-offset: 4px;
+  text-decoration-thickness: 1px;
+  font-weight: 400;
 }
 
 .prose ul {
@@ -90,10 +90,6 @@ body {
 
 .prose li {
   @apply text-lg;
-}
-
-.prose-lg {
-  color: var(--color-text-primary);
 }
 
 .prose code:not(pre code) {
