--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -30,3 +30,6 @@ const { title, description } = Astro.props;
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 <link rel="manifest" href="/site.webmanifest" />
+
+<!-- RSS Feed -->
+<link rel="alternate" type="application/rss+xml" title="RSS Feed for BenLimmer.com" href="/feed.xml" />
