feat: generate sitemap

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -33,3 +33,6 @@ const { title, description } = Astro.props;
 
 <!-- RSS Feed -->
 <link rel="alternate" type="application/rss+xml" title="RSS Feed for BenLimmer.com" href="/feed.xml" />
+
+<!-- Sitemap -->
+<link rel="sitemap" href="/sitemap-index.xml" />
