feat: more head tags

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -15,6 +15,7 @@ const { title, description } = Astro.props;
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
+<meta name="author" content="Ben Limmer" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
