--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,14 +1,23 @@
 ---
+import { render } from "astro:content";
 import "../styles/global.css";
+import headshot from "src/assets/headshot.png";
+import type { BlogPost } from "src/util";
 
 interface Props {
   title: string;
   description: string;
-  image?: string;
+  blogPost?: BlogPost;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-const { title, description } = Astro.props;
+const { title, description, blogPost } = Astro.props;
+
+let lastModified: string | undefined;
+if (blogPost) {
+  const blogPostContent = await render(blogPost);
+  lastModified = blogPostContent.remarkPluginFrontmatter.lastModified;
+}
 ---
 
 <!-- Global Metadata -->
@@ -37,3 +46,36 @@ const { title, description } = Astro.props;
 
 <!-- Sitemap -->
 <link rel="sitemap" href="/sitemap-index.xml" />
+
+<!-- Open Graph -->
+<meta property="og:site_name" content="BenLimmer.com" />
+<meta property="og:image" content={headshot.src} />
+<meta property="og:title" content={title} />
+<meta property="og:description" content={description} />
+<meta property="og:url" content={canonicalURL} />
+{
+  blogPost ? (
+    <>
+      <meta property="og:type" content="article" />
+      <meta property="article:published_time" content={blogPost.date.toString()} />
+      <meta property="article:modified_time" content={lastModified} />
+      <meta property="article:author" content="https://benlimmer.com/about/" />
+      {blogPost.data.tags?.map((tag) => (
+        <meta property="article:tag" content={tag} />
+      ))}
+    </>
+  ) : (
+    <>
+      <meta property="og:type" content="website" />
+    </>
+  )
+}
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@l1m5" />
+<meta name="twitter:creator" content="@l1m5" />
+<meta name="twitter:image:src" content={headshot.src} />
+<meta name="twitter:title" content={title} />
+<meta name="twitter:url" content={canonicalURL} />
+<meta name="twitter:description" content={description} />
