--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,20 +2,22 @@
 import Head from "src/components/Head.astro";
 import Header from "src/components/Header.astro";
 import Footer from "src/components/Footer.astro";
+import type { BlogPost } from "src/util";
 
 interface Props {
   title?: string[];
   description: string;
+  blogPost?: BlogPost;
 }
 
-const { title = [], description } = Astro.props;
+const { title = [], description, blogPost } = Astro.props;
 const titleString = [...title, "Ben Limmer"].join(" | ");
 ---
 
 <!doctype html>
 <html lang="en" class="h-full">
   <head>
-    <Head title={titleString} description={description} />
+    <Head title={titleString} description={description} blogPost={blogPost} />
   </head>
   <body class="flex min-h-full flex-col">
     <Header currentPath={Astro.url.pathname} />
