add google analytics

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -119,3 +119,23 @@ const isProd = !import.meta.env.DEV;
     />
   )
 }
+
+{/* Google Analytics */}
+{
+  isProd && (
+    <>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPYG2J7ECC" />
+      <script
+        set:html={`
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-ZPYG2J7ECC");
+    `}
+      />
+    </>
+  )
+}
